--- a/index.html
+++ b/index.html
@@ -30,21 +30,32 @@
             <h1 class="text-white font-medium text-sm leading-4 relative left-12">Important info regarding our service</h1>
             <img src="./img/chevron-down.svg" alt="" class="ml-auto">
         </div>
-        <div class="flex gap-1">
+        <div class="flex gap-9">
             <div class="max-w-xs w-72 h-96">
-                <div class="rounded border-2 border-black h-72">
-
+                <div class="rounded border-2 border-black h-72 p-3">
+                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
+                        USED
+                    </div>
                 </div>
                 <div class="flex justify-between">
-                    <span>Product name</span>
-                    <span>Condition</span>
+                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
+                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
                 </div>
                 <div class="flex justify-between">
-                    <span>Product name</span>
-                    <span>000 KR.</span>
+                    <span class="font-bold text-sm leading-5">000 KR.</span>
+                    <span class="font-normal text-sm leading-5">Slightly used</span>
+                </div>
+                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
+                    <button class="font-bold text-sm leading-4"></button>
                 </div>
             </div>
-            
+        </div>
+        <div class="w-6/12">
+            <h1 class="font-normal text-xl leading-6 flex items-center justify-center">Be the first one the know when we launch on beta!</h1>
+            <div class="flex gap-3 py-4">
+                <input placeholder="E-mail" class="font-semibold rounded flex-grow text-base leading-5 p-3 w-6/12 placeholder:text-black">
+                <div class="bg-orange-600 flex justify-center items-center py-1 px-5 rounded text-black font-bold text-base leading-5 ml-auto">Sign-Up</div>
+            </div>
         </div>
     </div>
 </body>
