--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="/output.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
@@ -30,7 +33,61 @@
             <h1 class="text-white font-medium text-sm leading-4 relative left-12">Important info regarding our service</h1>
             <img src="./img/chevron-down.svg" alt="" class="ml-auto">
         </div>
-        <div class="flex gap-9">
+        <div class="flex flex-wrap gap-9">
+            <div class="max-w-xs w-72 h-96">
+                <div class="rounded border-2 border-black h-72 p-3">
+                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
+                        USED
+                    </div>
+                </div>
+                <div class="flex justify-between">
+                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
+                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
+                </div>
+                <div class="flex justify-between">
+                    <span class="font-bold text-sm leading-5">000 KR.</span>
+                    <span class="font-normal text-sm leading-5">Slightly used</span>
+                </div>
+                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
+                    <button class="font-bold text-sm leading-4"></button>
+                </div>
+            </div>
+            <div class="max-w-xs w-72 h-96">
+                <div class="rounded border-2 border-black h-72 p-3">
+                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
+                        USED
+                    </div>
+                </div>
+                <div class="flex justify-between">
+                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
+                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
+                </div>
+                <div class="flex justify-between">
+                    <span class="font-bold text-sm leading-5">000 KR.</span>
+                    <span class="font-normal text-sm leading-5">Slightly used</span>
+                </div>
+                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
+                    <button class="font-bold text-sm leading-4"></button>
+                </div>
+            </div>
+            <div class="max-w-xs w-72 h-96">
+                <div class="rounded border-2 border-black h-72 p-3">
+                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
+                        USED
+                    </div>
+                </div>
+                <div class="flex justify-between">
+                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
+                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
+                </div>
+                <div class="flex justify-between">
+                    <span class="font-bold text-sm leading-5">000 KR.</span>
+                    <span class="font-normal text-sm leading-5">Slightly used</span>
+                </div>
+                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
+                    <button class="font-bold text-sm leading-4"></button>
+                </div>
+            </div>
             <div class="max-w-xs w-72 h-96">
                 <div class="rounded border-2 border-black h-72 p-3">
                     <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
@@ -50,11 +107,36 @@
                 </div>
             </div>
         </div>
+        
         <div class="w-6/12">
             <h1 class="font-normal text-xl leading-6 flex items-center justify-center">Be the first one the know when we launch on beta!</h1>
             <div class="flex gap-3 py-4">
                 <input placeholder="E-mail" class="font-semibold rounded flex-grow text-base leading-5 p-3 w-6/12 placeholder:text-black">
                 <div class="bg-orange-600 flex justify-center items-center py-1 px-5 rounded text-black font-bold text-base leading-5 ml-auto">Sign-Up</div>
+            </div>
+        </div>
+    </div>
+    <div class="bg-white   py-20 border-t-2 border-black">
+        <div class="m-auto flex w-5/6">
+            <div class="w-1/4">
+                <img src="./img/_2C.svg" alt="" class="w-20 h-20 m-auto">
+            </div>
+            <div class="flex flex-col w-1/4">
+                <span class="font_span font-bold text-sm leading-6">FAQ</span>
+                <span class="font_span font-bold text-sm leading-6">RETURNS</span>
+                <span class="font_span font-bold text-sm leading-6">CONTAC</span>
+            </div>
+            <div class="flex flex-col w-1/4">
+                <span class="font_span font-bold text-sm leading-6">TERMS & CONDITIONS</span>
+                <span class="font_span font-bold text-sm leading-6">PRIVACY POLICY</span>
+                <span class="font_span font-bold text-sm leading-6">COOKIE POLICY</span>
+                <span class="font_span font-bold text-sm leading-6">COOKIE SETTINGS</span>
+            </div>
+            <div class="flex flex-col w-1/4">
+                <span class="font_span font-bold text-sm leading-6">ABOUT SECOND CHANCE</span>
+                <span class="font_span font-bold text-sm leading-6">CAREER</span>
+                <span class="font_span font-bold text-sm leading-6">FACEBOOK</span>
+                <span class="font_span font-bold text-sm leading-6">INSTAGRAM</span>
             </div>
         </div>
     </div>
