--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link href="/output.css" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Test task Voodoo Ecom</title>
 </head>
 <body>
-    <div class="p-12 px-10 max-w-screen-2xl m-auto flex justify-between border-b-2 border-black">
+    <!-- Header -->
+    <div class="px-[24px] py-[25px] sm:px-[62px] sm:py-[48px] max-w-screen-2xl m-auto flex justify-between border-b-2 border-black">
         <div class="flex gap-2">
-            <img src="./img/_2C.svg" alt="" class="w-11 y-11 relative bottom-7">
-            <img src="./img/VooDoo Test.svg" alt="">
+            <img src="./img/_2C.svg" alt="" class="w-[23px] h-[23px] sm:w-[45px] sm:h-[45px] mb-auto">
+            <img src="./img/VooDoo Test.svg" alt="" class="w-[94px] h-[48px] sm:w-[192px] sm:h-[97px]">
         </div>
-        <div class="flex gap-12 mr-10">
-            <div class="font-semibold text-xl leading-6 p-2">About us</div>
-            <div class="font-bold text-xl leading-6 text-white bg-black py-2 px-4 h-max rounded">Sign-up</div>
+        <div class="flex gap-[16px] sm:gap-[48px] ">
+            <div class="font-semibold text-sm leading-4 py-2 w-[63px] h-[18px] sm:w-[88px] h-[26px] sm:text-xl mt-[1px]">About us</div>
+            <div class="font-bold text-sm leading-6 text-white bg-black flex items-center justify-center rounded w-[78px] h-[34px] sm:w-[101px] sm:h-[38px] sm:text-xl sm:mr-[60px]">Sign-up</div>
         </div>
     </div>
-    <div class="flex flex-col items-center px-32 py-12">
-        <div class="bg-black flex items-center gap-1 p-6 my-12 rounded w-full">
+    <!-- Contant -->
+    <div class="flex flex-col items-center p-[24px] sm:px-[120px] sm">
+        <div class="bg-black flex items-center gap-1 p-6 rounded w-full sm:px-[26px]">
             <img src="./img/alert-circle.svg" alt="" class="">
             <h1 class="text-white font-bold text-base leading-5">ALPHA</h1>
-            <h1 class="text-white font-medium text-sm leading-4 relative left-12">Important info regarding our service</h1>
+            <h1 class="text-white font-medium text-sm leading-4 relative left-12 hidden sm:block">Important info regarding our service</h1>
+            <h1 class="text-white font-medium text-sm leading-4 relative left-6 block sm:hidden">Important info</h1>
             <img src="./img/chevron-down.svg" alt="" class="ml-auto">
         </div>
-        <div class="flex flex-wrap gap-9">
-            <div class="max-w-xs w-72 h-96">
+        <div class="flex flex-wrap justify-center gap-6 mt-[60px] sm:mb-[120px]">
+            <div class="w-[342px] h-[402px] sm:w-[300px] sm:h-[300px] ">
                 <div class="rounded border-2 border-black h-72 p-3">
                     <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
                         USED
@@ -44,15 +46,15 @@
                     <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
                     <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
                 </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5">000 KR.</span>
-                    <span class="font-normal text-sm leading-5">Slightly used</span>
+                <div class="flex justify-between mt-[7px]">
+                    <span class="font-bold text-sm leading-4">000 KR.</span>
+                    <span class="font-normal text-sm leading-4">Slightly used</span>
                 </div>
-                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
-                    <button class="font-bold text-sm leading-4"></button>
+                <div class="p-3 mt-[12px] flex justify-center items-center bg-black rounded sm:hidden">
+                    <button class="font-bold text-sm leading-4 text-white">PICK-UP IN 2200</button>
                 </div>
             </div>
-            <div class="max-w-xs w-72 h-96">
+            <div class="w-[342px] h-[402px] sm:w-[300px] sm:h-[300px]">
                 <div class="rounded border-2 border-black h-72 p-3">
                     <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
                         USED
@@ -62,81 +64,49 @@
                     <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
                     <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
                 </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5">000 KR.</span>
-                    <span class="font-normal text-sm leading-5">Slightly used</span>
+                <div class="flex justify-between mt-[7px]">
+                    <span class="font-bold text-sm leading-4">000 KR.</span>
+                    <span class="font-normal text-sm leading-4">Slightly used</span>
                 </div>
-                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
-                    <button class="font-bold text-sm leading-4"></button>
-                </div>
-            </div>
-            <div class="max-w-xs w-72 h-96">
-                <div class="rounded border-2 border-black h-72 p-3">
-                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
-                        USED
-                    </div>
-                </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
-                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
-                </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5">000 KR.</span>
-                    <span class="font-normal text-sm leading-5">Slightly used</span>
-                </div>
-                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
-                    <button class="font-bold text-sm leading-4"></button>
+                <div class="p-3 mt-[12px] flex justify-center items-center bg-black rounded sm:hidden">
+                    <button class="font-bold text-sm leading-4 text-white">PICK-UP IN 2200</button>
                 </div>
             </div>
-            <div class="max-w-xs w-72 h-96">
-                <div class="rounded border-2 border-black h-72 p-3">
-                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
-                        USED
-                    </div>
-                </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
-                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
-                </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5">000 KR.</span>
-                    <span class="font-normal text-sm leading-5">Slightly used</span>
-                </div>
-                <div class="p-4 p4 mt-auto relative top-3 flex justify-center items-center">
-                    <button class="font-bold text-sm leading-4"></button>
-                </div>
-            </div>
-        </div>
-        
-        <div class="w-6/12">
-            <h1 class="font-normal text-xl leading-6 flex items-center justify-center">Be the first one the know when we launch on beta!</h1>
-            <div class="flex gap-3 py-4">
-                <input placeholder="E-mail" class="font-semibold rounded flex-grow text-base leading-5 p-3 w-6/12 placeholder:text-black">
-                <div class="bg-orange-600 flex justify-center items-center py-1 px-5 rounded text-black font-bold text-base leading-5 ml-auto">Sign-Up</div>
+        </div> 
+        <!-- Input -->
+        <div class="sm:w-2/4 sm:flex sm:flex-col sm:justify-center sm:items-center mt-[60px]">
+            <h1 class="font-normal text-sm sm:text-xl leading-4 sm:leading-6 ">Be the first one to know when we launch our beta!</h1>
+            <div class="flex gap-3 py-4 mt-[10px] mb-[80px] sm:w-full">
+                <input placeholder="E-mail" class="font-semibold rounded flex-grow text-base leading-5 p-3 placeholder:text-black">
+                <div class="bg-orange-600 flex justify-center items-center py-1 px-5 rounded text-black font-semibold text-base leading-5 ml-auto">Sign-up</div>
             </div>
         </div>
     </div>
-    <div class="bg-white   py-20 border-t-2 border-black">
-        <div class="m-auto flex w-5/6">
-            <div class="w-1/4">
-                <img src="./img/_2C.svg" alt="" class="w-20 h-20 m-auto">
+    <!-- Footer -->
+    <div class="bg-white py-3 sm:py-20 border-t-2 border-black ">
+        <div class="m-auto flex justify-center flex-col sm:flex-row sm:justify-start sm:w-5/6">
+            <div class="w-1/4 hidden m-0 sm:block sm:m-[24px]">
+                <img src="./img/_2C.svg" alt="" class="w-0 h-0 sm:w-20 sm:h-20 m-auto">
             </div>
-            <div class="flex flex-col w-1/4">
+            <div class="flex flex-col w-max sm:w-1/4 mx-[48px] m-[24px] sm:m-[24px]">
                 <span class="font_span font-bold text-sm leading-6">FAQ</span>
                 <span class="font_span font-bold text-sm leading-6">RETURNS</span>
                 <span class="font_span font-bold text-sm leading-6">CONTAC</span>
             </div>
-            <div class="flex flex-col w-1/4">
+            <div class="flex flex-col w-max sm:w-1/4 mx-[48px] m-[24px]">
                 <span class="font_span font-bold text-sm leading-6">TERMS & CONDITIONS</span>
                 <span class="font_span font-bold text-sm leading-6">PRIVACY POLICY</span>
                 <span class="font_span font-bold text-sm leading-6">COOKIE POLICY</span>
                 <span class="font_span font-bold text-sm leading-6">COOKIE SETTINGS</span>
             </div>
-            <div class="flex flex-col w-1/4">
+            <div class="flex flex-col w-max sm:w-1/4 mx-[48px] m-[24px]">
                 <span class="font_span font-bold text-sm leading-6">ABOUT SECOND CHANCE</span>
                 <span class="font_span font-bold text-sm leading-6">CAREER</span>
                 <span class="font_span font-bold text-sm leading-6">FACEBOOK</span>
                 <span class="font_span font-bold text-sm leading-6">INSTAGRAM</span>
+            </div>
+            <div class="w-1/4 mb-[48px] block sm:hidden m-auto mt-[24px]">
+                <img src="./img/_2C.svg" alt="" class="w-20 h-20 m-auto ">
             </div>
         </div>
     </div>
