--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Test task Voodoo Ecom</title>
 </head>
+
 <body>
     <!-- Header -->
     <div class="px-[24px] py-[25px] sm:px-[62px] sm:py-[48px] max-w-screen-2xl m-auto flex justify-between border-b-2 border-black">
@@ -22,63 +27,51 @@
             <img src="./img/VooDoo Test.svg" alt="" class="w-[94px] h-[48px] sm:w-[192px] sm:h-[97px]">
         </div>
         <div class="flex gap-[16px] sm:gap-[48px] ">
-            <div class="font-semibold text-sm leading-4 py-2 w-[63px] h-[18px] sm:w-[88px] h-[26px] sm:text-xl mt-[1px]">About us</div>
-            <div class="font-bold text-sm leading-6 text-white bg-black flex items-center justify-center rounded w-[78px] h-[34px] sm:w-[101px] sm:h-[38px] sm:text-xl sm:mr-[60px]">Sign-up</div>
+            <div class="font-semibold text-sm leading-4 py-2 w-[63px] h-[18px] sm:w-[88px] h-[26px] sm:text-xl mt-[px]">
+                About us</div>
+            <button class="font-bold text-sm leading-6 text-white bg-black flex items-center justify-center rounded w-[78px] h-[34px] sm:w-[101px] sm:h-[38px] sm:text-xl sm:mr-[60px] hover:bg-orange-500">Sign-up</button>
         </div>
     </div>
     <!-- Contant -->
-    <div class="flex flex-col items-center p-[24px] sm:px-[120px] sm">
-        <div class="bg-black flex items-center gap-1 p-6 rounded w-full sm:px-[26px]">
-            <img src="./img/alert-circle.svg" alt="" class="">
-            <h1 class="text-white font-bold text-base leading-5">ALPHA</h1>
-            <h1 class="text-white font-medium text-sm leading-4 relative left-12 hidden sm:block">Important info regarding our service</h1>
-            <h1 class="text-white font-medium text-sm leading-4 relative left-6 block sm:hidden">Important info</h1>
-            <img src="./img/chevron-down.svg" alt="" class="ml-auto">
+    <div class="flex flex-col p-[22px] sm:px-[120px] sm:mt-[60px]">
+        <div class="bg-black gap-1 p-6 rounded w-full sm:px-[26px] h-[72px] cursor-pointer" id="alpha-click">
+            <div class="flex h-max w-full ">
+                <img src="./img/alert-circle.svg" alt="" class="mr-[5px] mb-auto text-yellow-50">
+                <h1 class="text-yellow-50 font-bold relative top-[2px] text-base leading-5">ALPHA</h1>
+                <h1 class="text-yellow-50 font-medium  text-sm leading-4 relative top-[4px] left-11 hidden sm:pb-[15px] sm:block">Important info regarding our service</h1>
+                <h1 class="text-yellow-50 font-medium  text-sm leading-4 relative left-6 block sm:hidden underline-b-2px">Important info</h1>
+                <img src="./img/chevron-down.svg" alt="" class="ml-auto mb-auto">
+            </div>
+            <div class="text-white border-y border-yellow-50 py-[20px] mt-[20px] sm:mx-auto sm:w-[80%] opacity-0" id="visible-desc">
+                <h1 class="text-yellow-50 font-medium text-sm leading-4">We`re working a new service to offer yot returned online goods at a discount near you</h1>
+            </div>
+            <div class="sm:w-[80%] mx-auto pt-[20px] sm:flex opacity-0" id="visible-list">
+                <div class="sm:w-[45%]">
+                    <h1 class="text-yellow-50">CURRENTLY</h1>
+                    <ol class=" relative left-[15px] list-decimal">
+                        <li style="font-size: 11px;" class="text-yellow-50 font-thin  leading-4 py-[7px]">Very limited assortmeont of items thet we resell</li>
+                        <li style="font-size: 11px;" class="text-yellow-50 font-thin leading-4 py-[7px]">All sorts of product categories</li>
+                        <li style="font-size: 11px;" class="text-yellow-50 font-[2px] leading-4 py-[7px]">Focus on testing the ordering and pick-up experience</li>
+                    </ol>
+                </div>
+                <div class="sm:w-[45%]">
+                    <h1 class="text-yellow-50">FUTURE</h1>
+                    <ol class="relative left-[15px] list-decimal">
+                        <li style="font-size: 11px;" class="text-yellow-50 font-thin  leading-4 py-[7px]">Returned items from other shoppers</li>
+                        <li style="font-size: 11px;" class="text-yellow-50 font-thin leading-4 py-[7px]">Select product categories</li>
+                        <li style="font-size: 11px;" class="text-yellow-50 font-thin leading-4 py-[7px]">Focus on end-to-end service experience</li>
+                    </ol>
+                </div>
+            </div>
         </div>
-        <div class="flex flex-wrap justify-center gap-6 mt-[60px] sm:mb-[120px]">
-            <div class="w-[342px] h-[402px] sm:w-[300px] sm:h-[300px] ">
-                <div class="rounded border-2 border-black h-72 p-3">
-                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
-                        USED
-                    </div>
-                </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
-                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
-                </div>
-                <div class="flex justify-between mt-[7px]">
-                    <span class="font-bold text-sm leading-4">000 KR.</span>
-                    <span class="font-normal text-sm leading-4">Slightly used</span>
-                </div>
-                <div class="p-3 mt-[12px] flex justify-center items-center bg-black rounded sm:hidden">
-                    <button class="font-bold text-sm leading-4 text-white">PICK-UP IN 2200</button>
-                </div>
-            </div>
-            <div class="w-[342px] h-[402px] sm:w-[300px] sm:h-[300px]">
-                <div class="rounded border-2 border-black h-72 p-3">
-                    <div class="bg-black rounded w-max text-white font-normal text-sm leading-4 p-1 ">
-                        USED
-                    </div>
-                </div>
-                <div class="flex justify-between">
-                    <span class="font-bold text-sm leading-5 relative top-2">Product name</span>
-                    <span class="font-medium text-sm leading-5 relative top-2">Condition</span>
-                </div>
-                <div class="flex justify-between mt-[7px]">
-                    <span class="font-bold text-sm leading-4">000 KR.</span>
-                    <span class="font-normal text-sm leading-4">Slightly used</span>
-                </div>
-                <div class="p-3 mt-[12px] flex justify-center items-center bg-black rounded sm:hidden">
-                    <button class="font-bold text-sm leading-4 text-white">PICK-UP IN 2200</button>
-                </div>
-            </div>
-        </div> 
+        <div class="flex flex-wrap justify-center gap-6 mt-[60px]" id="product-cards-container"></div>
         <!-- Input -->
-        <div class="sm:w-2/4 sm:flex sm:flex-col sm:justify-center sm:items-center mt-[60px]">
-            <h1 class="font-normal text-sm sm:text-xl leading-4 sm:leading-6 ">Be the first one to know when we launch our beta!</h1>
-            <div class="flex gap-3 py-4 mt-[10px] mb-[80px] sm:w-full">
-                <input placeholder="E-mail" class="font-semibold rounded flex-grow text-base leading-5 p-3 placeholder:text-black">
-                <div class="bg-orange-600 flex justify-center items-center py-1 px-5 rounded text-black font-semibold text-base leading-5 ml-auto">Sign-up</div>
+        <div class="w-max sm:w-2/4 sm:flex sm:flex-col sm:justify-center sm:items-center mt-[98px] m-auto">
+            <h1 class="font-normal text-sm sm:text-xl leading-4 sm:leading-6 ">Be the first one to know when we launch
+                our beta!</h1>
+            <div class="flex gap-2 py-4 mt-[10px] mb-[80px] sm:w-full">
+                <input placeholder="E-mail"class="font-semibold rounded flex-grow text-base  leading-5 p-3 placeholder:text-black">
+                <div class="bg-orange-600 flex justify-center items-center py-1 px-3 sm:px-5 rounded text-black font-semibold text-base leading-5 ml-auto">Sign-up</div>
             </div>
         </div>
     </div>
@@ -110,5 +103,8 @@
             </div>
         </div>
     </div>
+
+    <script src="./script.js"></script>
 </body>
+
 </html>
