--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li style="font-size: 11px;" class="text-yellow-50 font-[2px] leading-4 py-[7px]">Focus on testing the ordering and pick-up experience</li>
                     </ol>
                 </div>
-                <div class="sm:w-[45%]">
+                <div class="sm:w-[45%] mt-[20px]">
                     <h1 class="text-yellow-50">FUTURE</h1>
                     <ol class="relative left-[15px] list-decimal">
                         <li style="font-size: 11px;" class="text-yellow-50 font-thin  leading-4 py-[7px]">Returned items from other shoppers</li>
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <div class="flex flex-wrap justify-center gap-6 mt-[60px]" id="product-cards-container"></div>
+        <div class="flex flex-wrap justify-center gap-6 mt-[60px] z-10" id="product-cards-container"></div>
         <!-- Input -->
         <div class="w-max sm:w-2/4 sm:flex sm:flex-col sm:justify-center sm:items-center mt-[98px] m-auto">
             <h1 class="font-normal text-sm sm:text-xl leading-4 sm:leading-6 ">Be the first one to know when we launch
@@ -82,21 +82,21 @@
                 <img src="./img/_2C.svg" alt="" class="w-0 h-0 sm:w-20 sm:h-20 m-auto">
             </div>
             <div class="flex flex-col w-max sm:w-1/4 mx-[48px] m-[24px] sm:m-[24px]">
-                <span class="font_span font-bold text-sm leading-6">FAQ</span>
-                <span class="font_span font-bold text-sm leading-6">RETURNS</span>
-                <span class="font_span font-bold text-sm leading-6">CONTAC</span>
+                <span class="font-bold text-sm leading-6">FAQ</span>
+                <span class="font-bold text-sm leading-6">RETURNS</span>
+                <span class="font-bold text-sm leading-6">CONTAC</span>
             </div>
             <div class="flex flex-col w-max sm:w-1/4 mx-[48px] m-[24px]">
-                <span class="font_span font-bold text-sm leading-6">TERMS & CONDITIONS</span>
-                <span class="font_span font-bold text-sm leading-6">PRIVACY POLICY</span>
-                <span class="font_span font-bold text-sm leading-6">COOKIE POLICY</span>
-                <span class="font_span font-bold text-sm leading-6">COOKIE SETTINGS</span>
+                <span class="font-bold text-sm leading-6">TERMS & CONDITIONS</span>
+                <span class="font-bold text-sm leading-6">PRIVACY POLICY</span>
+                <span class="font-bold text-sm leading-6">COOKIE POLICY</span>
+                <span class="font-bold text-sm leading-6">COOKIE SETTINGS</span>
             </div>
             <div class="flex flex-col w-max sm:w-1/4 mx-[48px] m-[24px]">
-                <span class="font_span font-bold text-sm leading-6">ABOUT SECOND CHANCE</span>
-                <span class="font_span font-bold text-sm leading-6">CAREER</span>
-                <span class="font_span font-bold text-sm leading-6">FACEBOOK</span>
-                <span class="font_span font-bold text-sm leading-6">INSTAGRAM</span>
+                <span class="font-bold text-sm leading-6">ABOUT SECOND CHANCE</span>
+                <span class="font-bold text-sm leading-6">CAREER</span>
+                <span class="font-bold text-sm leading-6">FACEBOOK</span>
+                <span class="font-bold text-sm leading-6">INSTAGRAM</span>
             </div>
             <div class="w-1/4 mb-[48px] block sm:hidden m-auto mt-[24px]">
                 <img src="./img/_2C.svg" alt="" class="w-20 h-20 m-auto ">
