edit indents in the drop-down box

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li style="font-size: 11px;" class="text-yellow-50 font-[2px] leading-4 py-[7px]">Focus on testing the ordering and pick-up experience</li>
                     </ol>
                 </div>
-                <div class="sm:w-[45%] mt-[20px]">
+                <div class="sm:w-[45%] mt-[15px] sm:mt-[0px]">
                     <h1 class="text-yellow-50">FUTURE</h1>
                     <ol class="relative left-[15px] list-decimal">
                         <li style="font-size: 11px;" class="text-yellow-50 font-thin  leading-4 py-[7px]">Returned items from other shoppers</li>
@@ -64,6 +64,7 @@
                 </div>
             </div>
         </div>
+        <!-- Generate list -->
         <div class="flex flex-wrap justify-center gap-6 mt-[60px] z-10" id="product-cards-container"></div>
         <!-- Input -->
         <div class="w-max sm:w-2/4 sm:flex sm:flex-col sm:justify-center sm:items-center mt-[98px] m-auto">
