--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Header -->
     <div class="px-[24px] py-[25px] sm:px-[62px] sm:py-[48px] max-w-screen-2xl m-auto flex justify-between border-b-2 border-black">
         <div class="flex gap-2">
-            <img src="./img/_2C.svg" alt="" class="w-[23px] h-[23px] sm:w-[45px] sm:h-[45px] mb-auto">
+            <img src="./img/Logomark.svg" alt="" class="w-[23px] h-[23px] sm:w-[45px] sm:h-[45px] mb-auto">
             <img src="./img/VooDoo Test.svg" alt="" class="w-[94px] h-[48px] sm:w-[192px] sm:h-[97px]">
         </div>
         <div class="flex gap-[16px] sm:gap-[48px] ">
