--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <span class="font-bold text-sm leading-6">INSTAGRAM</span>
             </div>
             <div class="w-1/4 mb-[48px] block sm:hidden m-auto mt-[24px]">
-                <img src="./img/_2C.svg" alt="" class="w-20 h-20 m-auto ">
+                <img src="./img/Logomark.svg" alt="" class="w-20 h-20 m-auto ">
             </div>
         </div>
     </div>
