--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="bg-white py-3 sm:py-20 border-t-2 border-black ">
         <div class="m-auto flex justify-center flex-col sm:flex-row sm:justify-start sm:w-5/6">
             <div class="w-1/4 hidden m-0 sm:block sm:m-[24px]">
-                <img src="./img/_2C.svg" alt="" class="w-0 h-0 sm:w-20 sm:h-20 m-auto">
+                <img src="./img/Logomark.svg" alt="" class="w-0 h-0 sm:w-20 sm:h-20 m-auto">
             </div>
             <div class="flex flex-col w-max sm:w-1/4 mx-[48px] m-[24px] sm:m-[24px]">
                 <span class="font-bold text-sm leading-6">FAQ</span>
